# metabase-api

./: README.md  pyproject.toml
src/metabase/: __init__.py  api.py  const.py  exceptions.py  models.py
tests/: test_api.py
