[project]
name = "metabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan LeRoy", email = "NLeRoy917@gmail.com" }
]
requires-python = ">=3.11.4"
dependencies = [
    "pydantic>=2.11.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
